fix configuration and improve tests